--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.9.0",
     "@types/sanitize-html": "^2.13.0",
     "nodemon": "^3.1.7",
@@ -39,6 +40,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^9.2.0",
+    "@google-cloud/storage": "^7.14.0",
     "@prisma/client": "^5.22.0",
     "argon2": "^0.41.1",
     "body-parser": "^1.20.3",
@@ -49,7 +51,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "reflect-metadata": "^0.2.2",
-    "sanitize-html": "^2.13.1"
+    "sanitize-html": "^2.13.1",
+    "uuid": "^11.0.3"
   }
 }
