--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.9.0",
+    "@types/nodemailer": "^6.4.16",
     "@types/sanitize-html": "^2.13.0",
     "nodemon": "^3.1.7",
     "prisma": "^5.22.0",
@@ -50,8 +51,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.16",
     "reflect-metadata": "^0.2.2",
     "sanitize-html": "^2.13.1",
     "uuid": "^11.0.3"
