--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
+    "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
     "sanitize-html": "^2.13.1",
     "uuid": "^11.0.3"
