Modifed rencana manual controller and this commit is ready for deployment to cloud run

--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "description": "This is the server REST API for our app called Nimbus",
   "main": "index.ts",
   "scripts": {
-    "build": "set NODE_ENV=production && tsc",
+    "build": "tsc",
     "postbuild": "node build.mjs",
-    "dev": "set NODE_ENV=development && nodemon --exec npx tsx src/index.ts",
-    "start": "set NODE_ENV=production && node dist/index.js",
+    "dev": "nodemon --exec npx tsx src/index.ts",
+    "start": "node dist/index.js",
     "seed:users": "npx tsx src/seed/user.seeder.ts",
     "seed:provinsi": "npx tsx src/seed/provinsi-wisata.seeder.ts",
     "seed:cw": "npx tsx src/seed/category-wisata.seeder.ts",
     "seed:tw": "npx tsx src/seed/tempat-wisata.seeder.ts"
   },
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/andyrhman/nimbus-server.git"
@@ -57,6 +58,7 @@
     "express": "^4.21.1",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
+    "mailtrap": "^3.4.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "pako": "^2.1.0",
