--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: Create service account file
         run: |
-          echo "${{ secrets.GCP_SA_KEY }}" > ./src/config/serviceAccount.json
+          echo "${{ secrets.GCP_NIMBUS_KEY }}" > ./src/config/serviceAccount.json
 
       - name: Google Cloud Auth
         uses: 'google-github-actions/auth@v2'
