--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -15,7 +15,12 @@ jobs:
 
       - name: Create service account file
         run: |
-          printf '%s' "${{ secrets.GCP_SA_KEY }}" > ./src/config/serviceAccount.json
+          echo "${{ secrets.GCP_SA_KEY }}" | sed 's/\\n/\
+      /g' > ./src/config/serviceAccount.json
+
+      - name: Validate JSON
+        run: |
+          jq . ./src/config/serviceAccount.json
 
       - name: Google Cloud Auth
         uses: 'google-github-actions/auth@v2'
