--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -15,8 +15,7 @@ jobs:
 
       - name: Create service account file
         run: |
-          echo "${{ secrets.GCP_SA_KEY }}" | sed 's/\\n/\
-      /g' > ./src/config/serviceAccount.json
+          echo "${{ secrets.GCP_NIMBUS_KEY }}" | sed 's/\\n/\/g' > ./src/config/serviceAccount.json
 
       - name: Validate JSON
         run: |
