--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -14,8 +14,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Create service account file
-        run: |
-          echo "${{ secrets.GCP_NIMBUS_KEY }}" | sed 's/\\n/\/g' > ./src/config/serviceAccount.json
+        run: echo "${{ secrets.GCP_SA_KEY }}" | sed $'s/\\\\n/\\\n/g' > ./src/config/serviceAccount.json
 
       - name: Validate JSON
         run: |
