--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -27,6 +27,14 @@ jobs:
         run: |
           jq . ./src/config/serviceAccount.json
 
+  build:
+    needs: configure
+    runs-on: 'ubuntu-latest'
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Google Cloud Auth
         uses: 'google-github-actions/auth@v2'
         with:
@@ -40,11 +48,6 @@ jobs:
         run: |
           gcloud auth configure-docker ${{ secrets.REGION }}-docker.pkg.dev
 
-  build:
-    needs: configure
-    runs-on: 'ubuntu-latest'
-
-    steps:
       - name: 'Create env file'
         run: |
           echo PORT=${{ secrets.PORT }} >> .env
@@ -65,6 +68,19 @@ jobs:
     runs-on: 'ubuntu-latest'
 
     steps:
+      - name: Google Cloud Auth
+        uses: 'google-github-actions/auth@v2'
+        with:
+          credentials_json: '${{ secrets.GCP_SA_KEY }}'
+          project_id: ${{ secrets.PROJECT_ID }}
+
+      - name: Set up Cloud SDK
+        uses: 'google-github-actions/setup-gcloud@v2'
+
+      - name: Configure Docker
+        run: |
+          gcloud auth configure-docker ${{ secrets.REGION }}-docker.pkg.dev
+          
       - name: Deploy to Cloud Run
         run: |
           gcloud run deploy ${{ secrets.SERVICE }} \
