--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@google-cloud/storage": "^7.14.0",
     "@prisma/client": "^5.22.0",
     "argon2": "^0.41.1",
+    "axios": "^1.7.8",
     "body-parser": "^1.20.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
