--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "pako": "^2.1.0",
+    "rate-limiter-flexible": "^5.0.4",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
     "sanitize-html": "^2.13.1",
